# pytorch-basics

./: pyproject.toml
pytorch_basics/notebooks/: 001_intro.ipynb  002_pytorch_workflow.ipynb  003_pytorch_classification.ipynb  004_pytorch_computer_vision.ipynb
pytorch_basics/notebooks/models/: 01_linear_regression_model.pth
